Fix alignment issue of ULS trigger
The calculated font-height is about 13.5px on my machine. For some
reason the usage of Autonym font sways the rounding of the container
height to 14px instead of 13px as for other items. I found out that
setting line-height to 1em or 100% makes the trigger size also round
to 13px, but I can't explain why. I didn't see any change in Modern
or Monobook skins (Monobook is broken already with bold and icon
missing).

Bug: 59239

--- a/resources/css/ext.uls.css
+++ b/resources/css/ext.uls.css
@@ -18,6 +18,8 @@
 
 #pt-uls a.uls-trigger {
 	padding-left: 30px;
+	/* Fix alignment in vector: https://bugzilla.wikimedia.org/59239 */
+	line-height: 1;
 }
 
 #p-lang .uls-settings-trigger {
